[package]
name = "async-pos-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rusqlite = { version = "0.31.0", features = ["bundled"] }
sha2 = "0.10"
chrono = "0.4"
